--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "lib/**/*.jar",
         "unit10/lab01acfl/lib/gson-2.10.1.jar"
     ],
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "liveServer.settings.port": 5503
 }
